--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Galaxy",
-  "description": "Vibrant, and fully customisable. Uses fullscreen images to greatly improve your Spotify experience.",
+  "description": "Uses fullscreen images to greatly improve your Spotify experience.",
   "preview": "preview.png",
   "readme": "README.md",
   "usercss": "user.css",
