--- a/color.ini
+++ b/color.ini
@@ -9,7 +9,7 @@ shadow             = 000000
 selected-row       = F1F1F1
 button             = F1F1F1
 button-active      = F1F1F1
-button-disabled    = 434C5E
+button-disabled    = 000000
 tab-active         = 000000
 notification       = 000000
 notification-error = F1F1F1
