--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Galaxy",
   "description": "Uses fullscreen images to greatly improve your Spotify experience. Add your own images to playlists and the home page",
-  "preview": "preview.png",
+  "preview": "preview_playlist.png",
   "readme": "README.md",
   "usercss": "user.css",
   "schemes": "color.ini",
